--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           # Build a docker container and push to ECR so it can be deployed to ECS
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          --build-arg TOKEN_ARG=${{ secrets.TOKEN }} \
+          --build-arg TOKEN_ARG=${{ secrets.TOKEN }}
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
