--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -37,8 +37,7 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           # Build a docker container and push to ECR so it can be deployed to ECS
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          --build-arg TOKEN_ARG=${{ secrets.TOKEN }}
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -e TOKEN_ARG=${{ secrets.TOKEN }} .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
