Added a missing command in the help command.

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,13 @@
             <artifactId>google-http-client-jackson2</artifactId>
             <version>1.42.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220924</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
