--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -53,6 +53,6 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: discord-bot
-          cluster:  arn:aws:ecs:us-west-2:840443637488:cluster/discord-bot
+          service: discord-bot-cluster
+          cluster:  arn:aws:ecs:us-west-2:840443637488:cluster/discord-bot-cluster
           wait-for-service-stability: true
